fix player spacing

--- a/src/app/main.module.css
+++ b/src/app/main.module.css
@@ -438,7 +438,7 @@
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1312px) {
   .center {
     width: 1280px;
   }
